--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <nav class="navigation-wrap">
                 <a href="./index.html" class="logo link">Web<span class="header-studio-color">Studio</span></a>
                 <ul class="list navigation-list">
-                    <li><a href="./index.html" class="header-link link">Studio</a></li>
+                    <li><a href="./index.html" class="header-link link current">Studio</a></li>
                     <li><a href="./portfolio.html" class="header-link link">Portfolio</a></li>
                     <li><a href="" class="header-link link">Contacts</a></li>
                 </ul>
@@ -52,11 +52,17 @@
                 <h2 class="visually-hidden"> About us </h2>
                 <ul class="list about-us-wrap">
                     <li class="about-us-item">
+                        <div class="about-us-box">
+
+                        </div>
                         <h3 class="about-us-head">Strategy</h3>
                         <p class="about-us-text">Our goal is to identify the business
                             problem to walk away with the perfect and creative solution.</p>
                     </li>
                     <li class="about-us-item">
+                        <div class="about-us-box">
+
+                        </div>
                         <h3 class="about-us-head">Punctuality</h3>
                         <p class="about-us-text">Bring the key message to the brand's audience for the best price within
                             the
@@ -64,12 +70,18 @@
                             time.</p>
                     </li>
                     <li class="about-us-item">
+                        <div class="about-us-box">
+
+                        </div>
                         <h3 class="about-us-head">Diligence</h3>
                         <p class="about-us-text">Research and confirm brands that present the strongest digital growth
                             opportunities and minimize
                             risk.</p>
                     </li>
                     <li class="about-us-item">
+                        <div class="about-us-box">
+
+                        </div>
                         <h3 class="about-us-head">Technologies</h3>
                         <p class="about-us-text">Design practice focused on digital experiences. We bring forth a deep
                             passion for
@@ -133,14 +145,35 @@
             </div>
         </section>
 
+        <section class="section customers-section">
+            <div class="container">
+                <h2 class="customers-head"> Customers </h2>
+                <ul class="list customers-list">
+                    <li class="customers-item"></li>
+                    <li class="customers-item"></li>
+                    <li class="customers-item"></li>
+                    <li class="customers-item"></li>
+                    <li class="customers-item"></li>
+                    <li class="customers-item"></li>
+                </ul>
+            </div>
+        </section>
+
     </main>
 
     <footer class="footer">
-        <div class="container">
-            <a href="./index.html" class="logo link footer-logo">Web<span class="footer-studio-color">Studio</span></a>
-            <p class="copyright-text">Increase the flow of customers and sales for your business with digital marketing
-                &
-                growth solutions.</p>
+        <div class="container footer-container">
+            <div>
+                <a href="./index.html" class="logo link footer-logo">Web<span
+                        class="footer-studio-color">Studio</span></a>
+                <p class="copyright-text">Increase the flow of customers and sales for your business with digital
+                    marketing
+                    &
+                    growth solutions.</p>
+            </div>
+            <div>
+
+            </div>
         </div>
     </footer>
 </body>
