--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
                 <a href="./index.html" class="logo link">Web<span class="header-studio-color">Studio</span></a>
                 <ul class="list navigation-list">
                     <li><a href="./index.html" class="header-link link">Studio</a></li>
-                    <li><a href="./portfolio.html" class="header-link link">Portfolio</a></li>
+                    <li><a href="./portfolio.html" class="header-link link current">Portfolio</a></li>
                     <li><a href="" class="header-link link">Contacts</a></li>
                 </ul>
             </nav>
