--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
                 <ul class="list about-us-wrap">
                     <li class="about-us-item">
                         <div class="about-us-box">
-
+                            <svg class="about-us-icon" width="64" height="64">
+                                <use href="./images/icons.svg#icon-antenna-1"></use>
+                            </svg>
                         </div>
                         <h3 class="about-us-head">Strategy</h3>
                         <p class="about-us-text">Our goal is to identify the business
@@ -61,7 +63,9 @@
                     </li>
                     <li class="about-us-item">
                         <div class="about-us-box">
-
+                            <svg class="about-us-icon" width="64" height="64">
+                                <use href="./images/icons.svg#icon-clock-1"></use>
+                            </svg>
                         </div>
                         <h3 class="about-us-head">Punctuality</h3>
                         <p class="about-us-text">Bring the key message to the brand's audience for the best price within
@@ -71,7 +75,9 @@
                     </li>
                     <li class="about-us-item">
                         <div class="about-us-box">
-
+                            <svg class="about-us-icon" width="64" height="64">
+                                <use href="./images/icons.svg#icon-diagram-1"></use>
+                            </svg>
                         </div>
                         <h3 class="about-us-head">Diligence</h3>
                         <p class="about-us-text">Research and confirm brands that present the strongest digital growth
@@ -80,7 +86,9 @@
                     </li>
                     <li class="about-us-item">
                         <div class="about-us-box">
-
+                            <svg class="about-us-icon" width="64" height="64">
+                                <use href="./images/icons.svg#icon-astronaut-1"></use>
+                            </svg>
                         </div>
                         <h3 class="about-us-head">Technologies</h3>
                         <p class="about-us-text">Design practice focused on digital experiences. We bring forth a deep
@@ -119,6 +127,43 @@
                             <h3 class="our-team-subhead">Mark Guerrero</h3>
                             <p class="our-team-text">Product Designer</p>
                         </div>
+                        <ul class="our-team-contacts list">
+                            <li class="our-team-contact">
+                                <a href="" class="our-team-link">
+                                    <span>
+                                        <svg class="our-team-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </span>
+                                </a>
+                            </li>
+                            <li class="our-team-contact">
+                                <a href="" class="our-team-link">
+                                    <span><svg class="our-team-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </span>
+                                </a>
+                            </li>
+                            <li class="our-team-contact">
+                                <a href="" class="our-team-link">
+                                    <span>
+                                        <svg class="our-team-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </span>
+                                </a>
+                            </li>
+                            <li class="our-team-contact">
+                                <a href="" class="our-team-link">
+                                    <span>
+                                        <svg class="our-team-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </span>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="our-team-item">
                         <img src="./images/our_team_2.jpg" alt="Tom Ford's photo" width="264" height="260">
@@ -126,6 +171,43 @@
                             <h3 class="our-team-subhead">Tom Ford</h3>
                             <p class="our-team-text">Frontend Developer</p>
                         </div>
+                        <ul class="our-team-contacts list">
+                            <li class="our-team-contact">
+                                <a href="" class="our-team-link">
+                                    <span>
+                                        <svg class="our-team-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </span>
+                                </a>
+                            </li>
+                            <li class="our-team-contact">
+                                <a href="" class="our-team-link">
+                                    <span><svg class="our-team-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </span>
+                                </a>
+                            </li>
+                            <li class="our-team-contact">
+                                <a href="" class="our-team-link">
+                                    <span>
+                                        <svg class="our-team-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </span>
+                                </a>
+                            </li>
+                            <li class="our-team-contact">
+                                <a href="" class="our-team-link">
+                                    <span>
+                                        <svg class="our-team-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </span>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="our-team-item">
                         <img src="./images/our_team_3.jpg" alt="Camila Garcia's photo" width="264" height="260">
@@ -133,6 +215,43 @@
                             <h3 class="our-team-subhead">Camila Garcia</h3>
                             <p class="our-team-text">Marketing</p>
                         </div>
+                        <ul class="our-team-contacts list">
+                            <li class="our-team-contact">
+                                <a href="" class="our-team-link">
+                                    <span>
+                                        <svg class="our-team-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </span>
+                                </a>
+                            </li>
+                            <li class="our-team-contact">
+                                <a href="" class="our-team-link">
+                                    <span><svg class="our-team-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </span>
+                                </a>
+                            </li>
+                            <li class="our-team-contact">
+                                <a href="" class="our-team-link">
+                                    <span>
+                                        <svg class="our-team-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </span>
+                                </a>
+                            </li>
+                            <li class="our-team-contact">
+                                <a href="" class="our-team-link">
+                                    <span>
+                                        <svg class="our-team-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </span>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                     <li class="our-team-item">
                         <img src="./images/our_team_4.jpg" alt="Daniel Wilson's photo" width="264" height="260">
@@ -140,6 +259,43 @@
                             <h3 class="our-team-subhead">Daniel Wilson</h3>
                             <p class="our-team-text">UI Designer</p>
                         </div>
+                        <ul class="our-team-contacts list">
+                            <li class="our-team-contact">
+                                <a href="" class="our-team-link">
+                                    <span>
+                                        <svg class="our-team-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                    </span>
+                                </a>
+                            </li>
+                            <li class="our-team-contact">
+                                <a href="" class="our-team-link">
+                                    <span><svg class="our-team-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                    </span>
+                                </a>
+                            </li>
+                            <li class="our-team-contact">
+                                <a href="" class="our-team-link">
+                                    <span>
+                                        <svg class="our-team-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                    </span>
+                                </a>
+                            </li>
+                            <li class="our-team-contact">
+                                <a href="" class="our-team-link">
+                                    <span>
+                                        <svg class="our-team-icon" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                                    </span>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                 </ul>
             </div>
@@ -149,12 +305,66 @@
             <div class="container">
                 <h2 class="customers-head"> Customers </h2>
                 <ul class="list customers-list">
-                    <li class="customers-item"></li>
-                    <li class="customers-item"></li>
-                    <li class="customers-item"></li>
-                    <li class="customers-item"></li>
-                    <li class="customers-item"></li>
-                    <li class="customers-item"></li>
+                    <li class="customers-item">
+                        <a href="" class="customers-link">
+                            <span>
+                                <svg class="customers-icon" width="
+104" height="56">
+                                    <use href="./images/icons.svg#icon-Client-logo-1"></use>
+                                </svg>
+                            </span>
+                        </a>
+                    </li>
+                    <li class="customers-item">
+                        <a href="" class="customers-link">
+                            <span>
+                                <svg class="customers-icon" width="
+104" height="56">
+                                    <use href="./images/icons.svg#icon-Client-logo-2"></use>
+                                </svg>
+                            </span>
+                        </a>
+                    </li>
+                    <li class="customers-item">
+                        <a href="" class="customers-link">
+                            <span>
+                                <svg class="customers-icon" width="
+104" height="56">
+                                    <use href="./images/icons.svg#icon-Client-logo-3"></use>
+                                </svg>
+                            </span>
+                        </a>
+                    </li>
+                    <li class="customers-item">
+                        <a href="" class="customers-link">
+                            <span>
+                                <svg class="customers-icon" width="
+104" height="56">
+                                    <use href="./images/icons.svg#icon-Client-logo-4"></use>
+                                </svg>
+                            </span>
+                        </a>
+                    </li>
+                    <li class="customers-item">
+                        <a href="" class="customers-link">
+                            <span>
+                                <svg class="customers-icon" width="
+104" height="56">
+                                    <use href="./images/icons.svg#icon-Client-logo-5"></use>
+                                </svg>
+                            </span>
+                        </a>
+                    </li>
+                    <li class="customers-item">
+                        <a href="" class="customers-link">
+                            <span>
+                                <svg class="customers-icon" width="
+104" height="56">
+                                    <use href="./images/icons.svg#icon-Client-logo-6"></use>
+                                </svg>
+                            </span>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </section>
@@ -172,7 +382,45 @@
                     growth solutions.</p>
             </div>
             <div>
-
+                <p class="footer-social-text">Social media</p>
+                <ul class="list footer-social-list">
+                    <li class="footer-social-item">
+                        <a href="" class="footer-social-link">
+                            <span>
+                                <svg class="footer-social-icon" width="24" height="24">
+                                    <use href="/images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </span>
+                        </a>
+                    </li>
+                    <li class="footer-social-item">
+                        <a href="" class="footer-social-link">
+                            <span>
+                                <svg class="footer-social-icon" width="24" height="24">
+                                    <use href="/images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </span>
+                        </a>
+                    </li>
+                    <li class="footer-social-item">
+                        <a href="" class="footer-social-link">
+                            <span>
+                                <svg class="footer-social-icon" width="24" height="24">
+                                    <use href="/images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </span>
+                        </a>
+                    </li>
+                    <li class="footer-social-item">
+                        <a href="" class="footer-social-link">
+                            <span>
+                                <svg class="footer-social-icon" width="24" height="24">
+                                    <use href="/images/icons.svg#icon-linkedin"></use>
+                                </svg>
+                            </span>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
     </footer>
