--- a/portfolio.html
+++ b/portfolio.html
@@ -140,11 +140,56 @@
     </main>
 
     <footer class="footer">
-        <div class="container">
-            <a href="./index.html" class="logo link footer-logo">Web<span class="footer-studio-color">Studio</span></a>
-            <p class="copyright-text">Increase the flow of customers and sales for your business with digital marketing
-                &
-                growth solutions.</p>
+        <div class="container footer-container">
+            <div>
+                <a href="./index.html" class="logo link footer-logo">Web<span
+                        class="footer-studio-color">Studio</span></a>
+                <p class="copyright-text">Increase the flow of customers and sales for your business with digital
+                    marketing
+                    &
+                    growth solutions.</p>
+            </div>
+            <div>
+                <p class="footer-social-text">Social media</p>
+                <ul class="list footer-social-list">
+                    <li class="footer-social-item">
+                        <a href="" class="footer-social-link">
+                            <span>
+                                <svg class="footer-social-icon" width="24" height="24">
+                                    <use href="/images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </span>
+                        </a>
+                    </li>
+                    <li class="footer-social-item">
+                        <a href="" class="footer-social-link">
+                            <span>
+                                <svg class="footer-social-icon" width="24" height="24">
+                                    <use href="/images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </span>
+                        </a>
+                    </li>
+                    <li class="footer-social-item">
+                        <a href="" class="footer-social-link">
+                            <span>
+                                <svg class="footer-social-icon" width="24" height="24">
+                                    <use href="/images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </span>
+                        </a>
+                    </li>
+                    <li class="footer-social-item">
+                        <a href="" class="footer-social-link">
+                            <span>
+                                <svg class="footer-social-icon" width="24" height="24">
+                                    <use href="/images/icons.svg#icon-linkedin"></use>
+                                </svg>
+                            </span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
