--- a/portfolio.html
+++ b/portfolio.html
@@ -54,8 +54,15 @@
 
                 <ul class="list portfolio-project-wrap">
                     <li class="portfolio-project-item">
-                        <a class="link"> <img src="./images/banking-app-interface.jpg"
-                                alt="The interface of a banking app" width="360" height="300">
+                        <a class="link portfolio-project-link">
+                            <div class="overlay-block">
+                                <img src="./images/banking-app-interface.jpg" alt="The interface of a banking app"
+                                    width="360" height="300">
+                                <span class="overlay-text-wrap">
+                                    <p class="overlay-text"> Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                        Doloribus eaque quidem saepe ipsam ducimus </p>
+                                </span>
+                            </div>
                             <div class="portfolio-item-wrap">
                                 <h2 class="portfolio-project-subhead">Banking App Interface Concept</h2>
                                 <p class="portfolio-project-text">App</p>
@@ -63,8 +70,15 @@
                         </a>
                     </li>
                     <li class="portfolio-project-item">
-                        <a class="link"> <img src="./images/cashless-payment.jpg"
-                                alt="A phone scanning QR code for payment" width="360" height="300">
+                        <a class="link portfolio-project-link">
+                            <div class="overlay-block">
+                                <img src="./images/cashless-payment.jpg" alt="A phone scanning QR code for payment"
+                                    width="360" height="300">
+                                <span class="overlay-text-wrap">
+                                    <p class="overlay-text"> Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                        Doloribus eaque quidem saepe ipsam ducimus </p>
+                                </span>
+                            </div>
                             <div class="portfolio-item-wrap">
                                 <h2 class="portfolio-project-subhead">Cashless Payment</h2>
                                 <p class="portfolio-project-text">Marketing</p>
@@ -72,8 +86,15 @@
                         </a>
                     </li>
                     <li class="portfolio-project-item">
-                        <a class="link"> <img src="./images/meditation-app.jpg"
-                                alt="Interface of the meditation app on laptom and phone" width="360" height="300">
+                        <a class="link portfolio-project-link">
+                            <div class="overlay-block">
+                                <img src="./images/meditation-app.jpg"
+                                    alt="Interface of the meditation app on laptom and phone" width="360" height="300">
+                                <span class="overlay-text-wrap">
+                                    <p class="overlay-text"> Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                        Doloribus eaque quidem saepe ipsam ducimus </p>
+                                </span>
+                            </div>
                             <div class="portfolio-item-wrap">
                                 <h2 class="portfolio-project-subhead">Meditation App</h2>
                                 <p class="portfolio-project-text">App</p>
@@ -81,8 +102,15 @@
                         </a>
                     </li>
                     <li class="portfolio-project-item">
-                        <a class="link"> <img src="./images/taxi-service.jpg"
-                                alt="A man driving a car looking at map on his phone" width="360" height="300">
+                        <a class="link portfolio-project-link">
+                            <div class="overlay-block">
+                                <img src="./images/taxi-service.jpg"
+                                    alt="A man driving a car looking at map on his phone" width="360" height="300">
+                                <span class="overlay-text-wrap">
+                                    <p class="overlay-text"> Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                        Doloribus eaque quidem saepe ipsam ducimus </p>
+                                </span>
+                            </div>
                             <div class="portfolio-item-wrap">
                                 <h2 class="portfolio-project-subhead">Taxi Service</h2>
                                 <p class="portfolio-project-text">Marketing</p>
@@ -90,8 +118,15 @@
                         </a>
                     </li>
                     <li class="portfolio-project-item">
-                        <a class="link"> <img src="./images/screen-illustrations.jpg"
-                                alt=" Wallpapers with the Moon on a phone" width="360" height="300">
+                        <a class="link portfolio-project-link">
+                            <div class="overlay-block">
+                                <img src="./images/screen-illustrations.jpg" alt=" Wallpapers with the Moon on a phone"
+                                    width="360" height="300">
+                                <span class="overlay-text-wrap">
+                                    <p class="overlay-text"> Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                        Doloribus eaque quidem saepe ipsam ducimus </p>
+                                </span>
+                            </div>
                             <div class="portfolio-item-wrap">
                                 <h2 class="portfolio-project-subhead">Screen Illustrations</h2>
                                 <p class="portfolio-project-text">Design</p>
@@ -99,8 +134,15 @@
                         </a>
                     </li>
                     <li class="portfolio-project-item">
-                        <a class="link"> <img src="./images/online-courses.jpg" alt="A happy woman looking at her phone"
-                                width="360" height="300">
+                        <a class="link portfolio-project-link">
+                            <div class="overlay-block">
+                                <img src="./images/online-courses.jpg" alt="A happy woman looking at her phone"
+                                    width="360" height="300">
+                                <span class="overlay-text-wrap">
+                                    <p class="overlay-text"> Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                        Doloribus eaque quidem saepe ipsam ducimus </p>
+                                </span>
+                            </div>
                             <div class="portfolio-item-wrap">
                                 <h2 class="portfolio-project-subhead">Online Courses</h2>
                                 <p class="portfolio-project-text">Marketing</p>
@@ -108,8 +150,15 @@
                         </a>
                     </li>
                     <li class="portfolio-project-item">
-                        <a class="link"> <img src="./images/instagram-stories.jpg"
-                                alt="Various examples of stylelized Instagram stories" width="360" height="300">
+                        <a class="link portfolio-project-link">
+                            <div class="overlay-block">
+                                <img src="./images/instagram-stories.jpg"
+                                    alt="Various examples of stylelized Instagram stories" width="360" height="300">
+                                <span class="overlay-text-wrap">
+                                    <p class="overlay-text"> Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                        Doloribus eaque quidem saepe ipsam ducimus </p>
+                                </span>
+                            </div>
                             <div class="portfolio-item-wrap">
                                 <h2 class="portfolio-project-subhead">Instagram Stories Concept</h2>
                                 <p class="portfolio-project-text">Design</p>
@@ -117,8 +166,15 @@
                         </a>
                     </li>
                     <li class="portfolio-project-item">
-                        <a class="link"> <img src="./images/organic-food.jpg"
-                                alt="A wooman walking with a bag of vegetables" width="360" height="300">
+                        <a class="link portfolio-project-link">
+                            <div class="overlay-block">
+                                <img src="./images/organic-food.jpg" alt="A wooman walking with a bag of vegetables"
+                                    width="360" height="300">
+                                <span class="overlay-text-wrap">
+                                    <p class="overlay-text"> Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                        Doloribus eaque quidem saepe ipsam ducimus </p>
+                                </span>
+                            </div>
                             <div class="portfolio-item-wrap">
                                 <h2 class="portfolio-project-subhead">Organic Food</h2>
                                 <p class="portfolio-project-text">Web Site</p>
@@ -126,8 +182,15 @@
                         </a>
                     </li>
                     <li class="portfolio-project-item">
-                        <a class="link"> <img src="./images/fresh-coffee.jpg" alt="A man pouring himself a cofee"
-                                width="360" height="300">
+                        <a class="link portfolio-project-link">
+                            <div class="overlay-block">
+                                <img src="./images/fresh-coffee.jpg" alt="A man pouring himself a cofee" width="360"
+                                    height="300">
+                                <span class="overlay-text-wrap">
+                                    <p class="overlay-text"> Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                        Doloribus eaque quidem saepe ipsam ducimus </p>
+                                </span>
+                            </div>
                             <div class="portfolio-item-wrap">
                                 <h2 class="portfolio-project-subhead">Fresh Coffee</h2>
                                 <p class="portfolio-project-text">Web Site</p>
