--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <section class="hero-section">
             <div class="container">
                 <h1 class="hero-head"> Effective Solutions for Your Business </h1>
-                <button type="button" class="studio-hero-button"> Order Service </button>
+                <button type="button" class="studio-hero-button" data-modal-open> Order Service </button>
             </div>
         </section>
 
@@ -424,6 +424,17 @@
             </div>
         </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <button type="button" class="modal-button" data-modal-close>
+                <svg width="8" height="8">
+                    <use href="./images/icons.svg#icon-close"></use>
+                </svg>
+            </button>
+        </div>
+    </div>
+    <script src="./js/modal.js"></script>
+
 </body>
 
 </html>
